# alfred

./: .drone.yml  .gitignore  .gitmodules  README.md  alfred.code-workspace  alfred.launch  copy_to_pi.sh  cross_compile.sh  env.sh  envAlfred.sh  envFaye.sh  generate_sysroot.sh  install_on_Alfred.sh  pinout.txt  pinout.xlsx  remote.code-workspace
alfred/src/hal/hal_camera/: CMakeLists.txt  README.md  package.xml
alfred/src/hal/hal_camera/src/: hal_camera.cpp
alfred/src/hal/hal_common/: CMakeLists.txt  README.md  package.xml
alfred/src/hal/hal_common/src/: hal_i2cRegistersServices.cpp
alfred/src/hal/hal_imu/: CMakeLists.txt  README.md  package.xml
alfred/src/hal/hal_imu/include/: hal_imuDmpMemory.hpp  hal_imuDmpWritingServer.hpp  hal_imuI2cInit.hpp  hal_imu_tests.hpp
alfred/src/hal/hal_imu/src/: hal_imu.cpp  hal_imuI2cInit.cpp  hal_imuI2cInit_node.cpp
alfred/src/hal/hal_imu/test/: test_hal_imuDmpWritingServer.cpp  test_hal_imuI2cInit.cpp
alfred/src/hal/hal_motor_control/: CMakeLists.txt  README.md
alfred/src/hal/hal_motor_control/include/: hal_motor.hpp  hal_motor_control.hpp  hal_motor_control_commonDefinitions.hpp  hal_motor_control_tests.hpp  hal_motor_control_tests_helpers.hpp  hal_motor_tests.hpp
alfred/src/hal/hal_motor_control/src/: hal_motor.cpp  hal_motor_control.cpp
alfred/src/hal/hal_motor_control/test/: test_hal_motor.cpp  test_hal_motor_control.cpp
alfred/src/hal/hal_pigpio/: CMakeLists.txt  README.md
alfred/src/hal/hal_pigpio/include/: hal_pigpio.hpp  hal_pigpioI2c.hpp  hal_pigpioInput.hpp  hal_pigpioOutput.hpp  hal_pigpio_tests.hpp
alfred/src/hal/hal_pigpio/src/: hal_pigpio.cpp  hal_pigpioI2c.cpp  hal_pigpioImu.cpp  hal_pigpioInit.cpp  hal_pigpioInput.cpp  hal_pigpioOutput.cpp  hal_pigpio_node.cpp
alfred/src/hal/hal_pigpio/test/: test_hal_pigpio.cpp  test_hal_pigpio_i2c.cpp  test_hal_pigpio_imu.cpp  test_hal_pigpio_init.cpp  test_hal_pigpio_input.cpp  test_hal_pigpio_output.cpp
alfred/src/hal/hal_pigpio_interfaces/: CMakeLists.txt  README.md  package.xml
alfred/src/hal/hal_pigpio_interfaces/srv/: HalPigpioClearResistor.srv  HalPigpioI2cClose.srv  HalPigpioI2cOpen.srv  HalPigpioI2cReadByteData.srv  HalPigpioI2cWriteBlockData.srv  HalPigpioI2cWriteByteData.srv  HalPigpioSetCallback.srv  HalPigpioSetPwmFrequency.srv
alfred/src/hal/hal_pose_manager/: CMakeLists.txt  README.md  package.xml
alfred/src/hal/hal_pose_manager/include/: hal_pose_manager.hpp  hal_pose_manager_tests.hpp
alfred/src/hal/hal_pose_manager/src/: hal_pose_manager.cpp  hal_pose_manager_node.cpp
alfred/src/hal/hal_pose_manager/test/: test_hal_pose_manager.cpp
catkin_ws/src/app/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/app/app_controller/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/app/app_controller/include/: app_controller.hpp
catkin_ws/src/app/app_controller/src/: app_controller.cpp
catkin_ws/src/app/src/: app_helloWorld.cpp
catkin_ws/src/app/test/: test_app.cpp
catkin_ws/src/hal/hal_bluetooth/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hal/hal_bluetooth/include/: hal_bluetooth.hpp  hal_bluetoothInterfaces.hpp  hal_bluetoothVirtuals.hpp
catkin_ws/src/hal/hal_bluetooth/msg/: hal_bluetoothMsg.msg
catkin_ws/src/hal/hal_bluetooth/src/: hal_bluetooth.cpp
catkin_ws/src/hal/hal_imu/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hal/hal_imu/action/: hal_imuWriteDMP.action  hal_imuWriteDmp.action
catkin_ws/src/hal/hal_imu/include/: hal_imu.hpp  hal_imuDmpMemory.hpp  hal_imuDmpWritingServer.hpp  hal_imuDmpWritingServerInterfaces.hpp  hal_imuDmpWritingServerVirtuals.hpp  hal_imuInit.hpp  hal_imuInterfaces.hpp  hal_imuMPU6050.hpp  hal_imuVirtuals.hpp
catkin_ws/src/hal/hal_imu/msg/: hal_imuI2cHeartbeatMsg.msg  hal_imuMsg.msg
catkin_ws/src/hal/hal_imu/src/: hal_imu.cpp  hal_imuDmpWritingServer.cpp  hal_imuI2cInit.cpp  hal_imuInit.cpp
catkin_ws/src/hal/hal_imu/test/: test_hal.cpp  test_hal_imu.cpp  test_hal_imuDmpWritingServer.cpp
catkin_ws/src/hal/hal_motorcontrol/: CMakeLists.txt
catkin_ws/src/hal/hal_motorcontrol/include/: commonDefinitions.hpp  hal_motorControl.hpp  hal_motorControlInterfaces.hpp  hal_motorControlVirtuals.hpp
catkin_ws/src/hal/hal_motorcontrol/msg/: hal_motorControlMsg.msg
catkin_ws/src/hal/hal_motorcontrol/src/: hal_motor.cpp  hal_motorControl.cpp
catkin_ws/src/hal/hal_pigpio/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hal/hal_pigpio/include/: hal_pigpioI2c.hpp  hal_pigpioImu.hpp  hal_pigpioInit.hpp  hal_pigpioInput.hpp  hal_pigpioOutput.hpp  pigpioI2c.hpp  pigpioInit.hpp  pigpioInput.hpp  pigpioOutput.hpp
catkin_ws/src/hal/hal_pigpio/msg/: hal_pgpioEdgeChangeMsg.msg  hal_pigpioAnglesMsg.msg  hal_pigpioEncoderCountMsg.msg  hal_pigpioHeartbeatMsg.msg  hal_pigpioMotorDirectionMsg.msg  hal_pigpioQuaternionsMsg.msg
catkin_ws/src/hal/hal_pigpio/src/: hal_helloWorld.cpp  hal_pigpio.cpp  hal_pigpioI2c.cpp  (+4 more)
catkin_ws/src/hal/hal_proxsens/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/sim/: CMakeLists.txt  README.md  coef_simulation.ods  package.xml
catkin_ws/src/sim/config/: wheels.yaml
catkin_ws/src/sim/launch/: alfred.launch  display.launch  gazebo.launch
catkin_ws/src/sim/urdf/: alfred.urdf  alfred.xacro
remote/app/remote/: Cargo.toml  README.md  app.toml
remote/app/remote/src/: main.rs
workspace/src/app/app_lifecycle_manager/: CMakeLists.txt  README.md  package.xml
workspace/src/hal/hal_camera_interfaces/: CMakeLists.txt  README.md
workspace/src/hal/hal_common/: CMakeLists.txt  README.md  package.xml
workspace/src/hal/hal_imu_interfaces/: CMakeLists.txt  README.md  package.xml
workspace/src/hal/hal_lifecycle_manager/: CMakeLists.txt  README.md  package.xml
workspace/src/hal/hal_motor_control/: CMakeLists.txt  README.md  package.xml
workspace/src/hal/hal_motor_control_interfaces/: CMakeLists.txt  README.md  package.xml
workspace/src/hal/hal_motorcontrol/: CMakeLists.txt  package.xml
workspace/src/sim/: README.md  package.xml
workspace/src/sim/sdf/: ground.sdf  world.sdf
workspace/src/sim/urdf/: alfred.urdf  alfred.xacro
(+332 files in other folders)
