[package]
edition = "2021"
readme = "README.md"
name = "remote"
version = "0.1.0"

[features]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
stm32f3 = { workspace = true, optional = true, features = ["stm32f303", "rt"] }

kern = { path = "../../sys/kern" }

# this lets you use `cargo fix`!
[[bin]]
name = "remote"
test = false
bench = false
