<?xml version="1.0"?>
<package format="2">
  <name>app_controller</name>
  <version>0.0.1</version>
  <description>APP controller package for Alfred</description>

  <!-- Maintainer, author and license information -->
  <maintainer email="arnaud.hote@gmail.com">Arnix</maintainer>
  <author email="arnaud.hote@gmail.com">Arnix</author>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
